--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,11 @@
     color: var(--primary);
 }
 
+.flex-logo{
+    display: flex;
+    align-items: center;
+} 
+
 @media (max-width: 991.98px) {
     .navbar .navbar-nav {
         margin-top: 10px;
